--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -5,4 +5,4 @@ nixPkgs = ["ffmpeg", "python310"]
 cmds = ["pip install -r requirements.txt"]
 
 [start]
-cmd = "gunicorn app:app --bind 0.0.0.0:$PORT --workers 1"
+cmd = "gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads 1 --timeout 90"
